visualizer: Switch to pug view for alignment viewing
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/css/jev.css
+++ b/visualizer/css/jev.css
@@ -1,7 +1,7 @@
 body {
     background-color: #d1d1f1;
 }
-#viewer,#tree {
+#igviewer,#tree {
     outline: solid;
     border-radius: 2pt;
     background-color: white;
