--- a/visualizer/views/index.pug
+++ b/visualizer/views/index.pug
@@ -16,7 +16,11 @@ block layout-content
         div.panel-heading
           h2.panel-title Sample Results
         div.panel-body
-          ul
+          table.table.table-striped.table-responsive.table-hover
             each sample in samples
-              li
-                a(href="/sample?s=" + sample)= sample
+              tr
+                td=sample
+                td
+                  a(href="/alignments/" + sample) Alignment
+                td
+                  a(href="/phylogenetics/" + sample) Phylogenetic Tree
