--- a/visualizer/css/jev.css
+++ b/visualizer/css/jev.css
@@ -1,7 +1,7 @@
 body {
     background-color: #d1d1f1;
 }
-#igviewer,#tree {
+#igviewer,#phylotree {
     outline: solid;
     border-radius: 2pt;
     background-color: white;
