visualizer: Warn and remove contig display if no contigs are available
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/views/alignment.pug
+++ b/visualizer/views/alignment.pug
@@ -2,6 +2,10 @@ extends layout
 
 block layout-content
   h1 #{samplename}
+  if !hascontigs
+    div.alert.alert-danger
+      i de novo
+      |  assembly failed for this sample
   div#igviewer
 
 block layout-scripts
