visualizer: Allow for downloading of alignment bams
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/views/index.pug
+++ b/visualizer/views/index.pug
@@ -54,6 +54,9 @@ block layout-content
                 td=sample.samplename
                 td
                   a(href=`/alignments/${sample.samplename}`) Alignment
+                  | &ensp;
+                  a(href=`/data/${sample.samplename}.bam`)
+                    span.glyphicon.glyphicon-download-alt
                 td
                   if sample.hastree
                     a(href=`/phylogenetics/${sample.samplename}`) Phylogenetic Tree
