visualizer: Perform more outputs and sort them into proper folders
Greatly simplify the process of finding and obtaining results files by

1. Outputing more results files, including
   - Reference genome fasta
   - Reference genome annotation
   - Kraken reports
   - Read alignments
   - Assembly sequences
   - Assembly alignments
   - Variant calls
   - Haplotype sequences
   - Haplotype data
   - Multi-alignments
   - Phylogenetic trees
2. Placing like files into subdirectories
3. Linking every single file in the visualizer

Also, update docs to reflect these changes.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/_views/layout.pug
+++ b/visualizer/_views/layout.pug
@@ -7,7 +7,7 @@ html(lang="en")
     link(rel="shortcut icon", href="/favicon.ico")
     link(rel="stylesheet", href="/css/twbs/bootstrap.min.css", type="text/css")
     link(rel="stylesheet", href="/css/local/jev.css", type="text/css")
-    title #{title}
+    title #{title} | JEV Analysis Pipeline Results
   body
     div.container-fluid
       block layout-content
