Recover from power outage
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/_views/layout.pug
+++ b/visualizer/_views/layout.pug
@@ -9,7 +9,7 @@ html(lang="en")
     link(rel="stylesheet", href="/css/twbs/bootstrap.min.css", type="text/css")
     link(rel="stylesheet", href="/css/fa/all.min.css", type="text/css")
     block layout-styles
-    link(rel="stylesheet", href="/css/local/jev.css", type="text/css")
+    link(rel="stylesheet", href="/css/local/yavsap.css", type="text/css")
     title #{title} | JEV Analysis Pipeline Results
   body
     div.container-fluid
