Update visualizer to use new variant call output
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/_views/index.pug
+++ b/visualizer/_views/index.pug
@@ -136,7 +136,7 @@ block layout-content
                         td
                           ul
                             li
-                              a(href=`/variants/${sample.samplename}.variants.tsv`)
+                              a(href=`/variants/${sample.samplename}.vcf`)
                                 i.fas.fa-download
                                 | &nbsp; Variant TSV
                       else
