Update VCF label
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/_views/index.pug
+++ b/visualizer/_views/index.pug
@@ -138,7 +138,7 @@ block layout-content
                             li
                               a(href=`/variants/${sample.samplename}.vcf`)
                                 i.fas.fa-download
-                                | &nbsp; Variant TSV
+                                | &nbsp; Variant VCF
                       else
                         td.table-warning
                           i.fas.fa-exclamation
