--- a/visualizer/_views/index.pug
+++ b/visualizer/_views/index.pug
@@ -136,9 +136,9 @@ block layout-content
                         td
                           ul
                             li
-                              a(href=`/variants/${sample.samplename}.variants.tsv`)
+                              a(href=`/variants/${sample.samplename}.vcf`)
                                 i.fas.fa-download
-                                | &nbsp; Variant TSV
+                                | &nbsp; Variant VCF
                       else
                         td.table-warning
                           i.fas.fa-exclamation
