--- a/visualizer/_views/tree.pug
+++ b/visualizer/_views/tree.pug
@@ -5,12 +5,16 @@ block layout-styles
 
 block layout-content
   h1 #{samplename}
-  div.group(role="group")
-    button(type="button", onClick="zoomin()").btn
-      i.fas.fa-search-plus
-    button(type="button" onClick="zoomout()").btn
-      i.fas.fa-search-minus
-  div#phylotree
+  div.row
+    div.col-12
+      div.btn-group(role="group")
+        button(type="button", onClick="zoomin()").btn.btn-primary
+          i.fas.fa-search-plus
+        button(type="button" onClick="zoomout()").btn.btn-primary
+          i.fas.fa-search-minus
+  div.row
+    div.col-12
+      div#phylotree.my-2.p-3
 
 block layout-scripts
   script(src="/js/d3/d3.js")
